--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Edgecut
+            BOOLEAN INDEX
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="furniture.html">Services</a>
+                <a class="nav-link" href="Services.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
@@ -66,7 +66,7 @@
               </li>
             </ul>
           </div>
-          <div class="quote_btn-container">
+          <!-- <div class="quote_btn-container">
             <a href="">
               <span>
                 Login
@@ -78,7 +78,7 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
               </button>
             </form>
-          </div>
+          </div> -->
         </div>
       </nav>
     </header>
@@ -94,7 +94,7 @@
                   <div class="detail-box">
                     <h1>
                       For All Your <br>
-                      Furniture Needs
+                      Services Needs
                     </h1>
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
@@ -124,7 +124,7 @@
                   <div class="detail-box">
                     <h1>
                       For All Your <br>
-                      Furniture Needs
+                      Services Needs
                     </h1>
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
@@ -154,7 +154,7 @@
                   <div class="detail-box">
                     <h1>
                       For All Your <br>
-                      Furniture Needs
+                      Services Needs
                     </h1>
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
@@ -188,13 +188,13 @@
     <!-- end slider section -->
   </div>
 
-  <!-- furniture section -->
+  <!-- Services section -->
 
-  <section class="furniture_section layout_padding">
+  <section class="Services_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Our Furniture
+          Our Services
         </h2>
         <p>
           which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't an
@@ -325,7 +325,7 @@
     </div>
   </section>
 
-  <!-- end furniture section -->
+  <!-- end Services section -->
 
 
   <!-- about section -->
@@ -610,7 +610,7 @@
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="furniture.html">Furniture</a>
+                <a class="" href="Services.html">Services</a>
                 <a class="" href="blog.html">Blog</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
