--- a/Services.html
+++ b/Services.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Edgecut</title>
+  <title>BOOLEAN INDEX</title>
 
 
   <!-- bootstrap core css -->
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Edgecut
+            BOOLEAN INDEX
           </span>
         </a>
         </a>
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="furniture.html">Furnitures</a>
+                <a class="nav-link" href="Services.html">Servicess</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
@@ -86,13 +86,13 @@
     <!-- end header section -->
   </div>
 
-  <!-- furniture section -->
+  <!-- Services section -->
 
-  <section class="furniture_section layout_padding">
+  <section class="Services_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Our Furniture
+          Our Services
         </h2>
         <p>
           which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't an
@@ -223,7 +223,7 @@
     </div>
   </section>
 
-  <!-- end furniture section -->
+  <!-- end Services section -->
 
   <!-- info section -->
   <section class="info_section long_section">
@@ -260,7 +260,7 @@
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="furniture.html">Furniture</a>
+                <a class="" href="Services.html">Services</a>
                 <a class="" href="blog.html">Blog</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
