--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Edgecut</title>
+  <title>BOOLEAN INDEX</title>
 
 
   <!-- bootstrap core css -->
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Edgecut
+            BOOLEAN INDEX
           </span>
         </a>
         </a>
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="furniture.html">Furnitures</a>
+                <a class="nav-link" href="Services.html">Services</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="blog.html">Blog</a>
@@ -192,7 +192,7 @@
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="furniture.html">Furniture</a>
+                <a class="" href="Services.html">Services</a>
                 <a class="" href="blog.html">Blog</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
