--- a/Services.html
+++ b/Services.html
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="Services.html">Servicess</a>
+                <a class="nav-link" href="Services.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
