--- a/Services.html
+++ b/Services.html
@@ -43,7 +43,8 @@
           </span>
         </a>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""> </span>
         </button>
 
@@ -56,9 +57,42 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
-              <li class="nav-item active">
+              <!-- <li class="nav-item active">
                 <a class="nav-link" href="Services.html">Services</a>
-              </li>
+              </li> -->
+              <nav>
+                <ul class="nav-item">
+                  <li><a href="#">Resume</a>
+                    <ul>
+                      <li><a href="#">item a lonng submenu</a></li>
+                      <li><a href="#">item1</a>
+                        <ul>
+                          <li><a href="#">Ray</a></li>
+                          <li><a href="#">Veronica</a></li>
+                          <li><a href="#">Bushy</a></li>
+                          <li><a href="#">Havoc</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#">item2</a>
+                      <ul>
+                        <li><a href="#">Ray2</a></li>
+                        <li><a href="#">Veronica2</a></li>
+                        <li><a href="#">Bushy2</a></li>
+                        <li><a href="#">Havoc2</a></li>
+                      </ul>
+                    </li>
+                      <li><a href="#">item3</a>
+                      <ul>
+                        <li><a href="#">Ray3</a></li>
+                        <li><a href="#">Veronica3</a></li>
+                        <li><a href="#">Bushy3</a></li>
+                        <li><a href="#">Havoc3</a></li>
+                      </ul>
+                    </li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
               </li>
@@ -95,7 +129,8 @@
           Our Services
         </h2>
         <p>
-          which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't an
+          which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
+          sure there isn't an
         </p>
       </div>
       <div class="row">
@@ -346,7 +381,8 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 
 </body>
