--- a/about.html
+++ b/about.html
@@ -104,8 +104,28 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
-            </p>
+              <b>What we do</b> <br>
+              A full-service technology provider offering digital and technical solutions for your company. <br>
+              Making things work for you is what we do. Our staff is prepared to assist you in creating a customized plan to scale your organization because we have over two decades of varied technology knowledge. We provide a wide range of services, including website and app development, cloud computing, and IT solutions.<br>
+              <b>At Boolean Index, we work hard to give our clients the tranquility they deserve.</b><br>
+              <b>Why You Should Choose Boolean Index</b><br>
+              Our services go beyond what an MSP typically offers. In addition to providing IT support, we also have a digital agency that can build your brand. Watch our CEO and Founder explain why EMPIST is the best option for you!<br>
+              <b>Our Purpose</b><br>
+              Our goal at Boolean Index is to give companies of any size the resources and solutions they need to prosper in the rapidly evolving technological environment.<br>
+              <b>We Don't Mess Around<br>
+              We offer specialized services to our customers.<br>
+              IT Solutions <br>
+              Website Development<br> 
+              Cloud Solutions<br>
+              A single strategic partner, all in.<br>
+              Consequently, you can resume doing what you do best.<br>
+              
+              Our Goal<br></b>
+              Our mission is straightforward: to lead our clients' growth by combining communication, collaboration, enthusiasm, and innovation in equal measure.<br>
+              
+              <b>We can't use it if it doesn't work for you.</b><br>
+              Because we grow along with your company when you succeed, Boolean Index values the success of its clients. Because of this, you will always be the center of our attention. Our goal will be to be a crucial component of your success as your business looks to the future.
+             </p>
             <a href="">
               Read More
             </a>
