--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             BOOLEAN INDEX
           </span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""> </span>
         </button>
 
@@ -55,8 +56,25 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Services.html">Services</a>
+              <li class="dropdown nav-item">
+                <a href="#">Services</a>
+                <div class="dropdown-content">
+                  <a href="Services.html">IT Services</a>
+                  <div class="submenu">
+                    <a href="#">Managed Services</a>
+                    <a href="#">Cloud Services </a>
+                    <a href="#">Professional IT Services</a>
+                    <a href="#">Cybersecurity</a>
+                    <a href="#">Process Improvement in Business</a>
+                </div>
+                <a href="Services.html">Digital Alternative</a>
+                  <div class="submenu">
+                    <a href="#">Website Design and Development</a>
+                    <a href="#">Full Stack Development</a>
+                    <a href="#">Website Maintenance</a>
+                </div>
+                <a href="Services.html">Consulting</a>
+
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
@@ -93,11 +111,12 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      For All Your <br>
-                      Services Needs
+                      IT Services <br>
+                      Managed Services
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Say Goodbye to Downtime with Managed IT Services
+                      With our efficient Managed IT Services, you may expand your business.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -123,11 +142,11 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      For All Your <br>
-                      Services Needs
+                      Digital Alternative<br>
+                      Website Design and Development
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Designing and producing the perfect online brand experience
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -153,11 +172,12 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      For All Your <br>
+                      Consulting <br>
                       Services Needs
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo
+                      maxime voluptatem a itaque suscipit.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -197,7 +217,8 @@
           Our Services
         </h2>
         <p>
-          which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't an
+          which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
+          sure there isn't an
         </p>
       </div>
       <div class="row">
@@ -346,9 +367,11 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              A full-service technology provider offering digital and technical solutions for your company.<br>
+              Making things work for you is what we do. Our staff is prepared to assist you in creating a customized plan to scale your organization because we have over two decades of varied technology knowledge. We provide a wide range of services, including website and app development, cloud computing, and IT solutions.<br>
+              At Boolean Index, we work hard to give our clients the tranquility they deserve.
             </p>
-            <a href="">
+            <a href="about.html">
               Read More
             </a>
           </div>
@@ -379,9 +402,12 @@
                 ttook even slightly believable. If you are
               </h5>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-                alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-                alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
               </p>
               <a href="">
                 Read More
@@ -399,7 +425,8 @@
                 Anything embarrassing hidden in the middle
               </h5>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
               </p>
               <a href="">
                 Read More
@@ -417,7 +444,8 @@
                 Molestias magni natus dolores odio commodi. Quaerat!
               </h5>
               <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
               </p>
               <a href="">
                 Read More
@@ -696,7 +724,8 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 
 </body>
