--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
               </li>
             </ul>
           </div>
-          <div class="quote_btn-container">
+          <!-- <div class="quote_btn-container">
             <a href="">
               <span>
                 Login
@@ -79,7 +79,7 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
               </button>
             </form>
-          </div>
+          </div> -->
         </div>
       </nav>
     </header>
@@ -237,7 +237,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">BOOLEAN INDEX</a>
       </p>
     </div>
   </footer>
