--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="dropdown nav-item">
-                <a href="#">Services</a>
+                <a href="Services.html">Services</a>
                 <div class="dropdown-content">
-                  <a href="Services.html">IT Services</a>
+                  <a href="../BooleanIndex/BI_Services/IT_Services.html">IT Services</a>
                   <div class="submenu">
                     <a href="#">Managed Services</a>
-                    <a href="#">Cloud Services </a>
+                    <a href="../BooleanIndex/Services.html">Cloud Services </a>
                     <a href="#">Professional IT Services</a>
                     <a href="#">Cybersecurity</a>
-                    <a href="#">Process Improvement in Business</a>
+                    <a href="../BooleanIndex/Services.html">Process Improvement in Business</a>
                 </div>
                 <a href="Services.html">Digital Alternative</a>
                   <div class="submenu">
@@ -122,7 +122,7 @@
                       <a href="" class="btn1">
                         Contact Us
                       </a>
-                      <a href="" class="btn2">
+                      <a href="about.html" class="btn2">
                         About Us
                       </a>
                     </div>
@@ -152,7 +152,7 @@
                       <a href="" class="btn1">
                         Contact Us
                       </a>
-                      <a href="" class="btn2">
+                      <a href="about.html" class="btn2">
                         About Us
                       </a>
                     </div>
@@ -183,7 +183,7 @@
                       <a href="" class="btn1">
                         Contact Us
                       </a>
-                      <a href="" class="btn2">
+                      <a href="about.html" class="btn2">
                         About Us
                       </a>
                     </div>
@@ -217,8 +217,7 @@
           Our Services
         </h2>
         <p>
-          which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
-          sure there isn't an
+          We're here to make things easier for you! Our award-winning Managed Services enable you to focus on operating your business while we handle the technology.
         </p>
       </div>
       <div class="row">
@@ -229,14 +228,14 @@
             </div>
             <div class="detail-box">
               <h5>
-                brown Chair Design
+                IT Services 
               </h5>
               <div class="price_box">
                 <h6 class="price_heading">
-                  <span>$</span> 100.00
+                  <span></span>
                 </h6>
-                <a href="">
-                  Buy Now
+                <a href="../BooleanIndex/IT_Services.html">
+                  Read More
                 </a>
               </div>
             </div>
