--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
         <div class="col-md-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="images/f2.jpg" alt="">
+              <img src="images/f2.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                Cloud Services 
+                Digital Alternatives 
               </h5>
               <div class="price_box">
                 <h6 class="price_heading">
@@ -251,40 +251,40 @@
             </div>
             <div class="detail-box">
               <h5>
-                House Chair Design
+                Consulting
               </h5>
               <div class="price_box">
                 <h6 class="price_heading">
-                  <span>$</span> 200.00
+                  <!-- <span>$</span> 200.00 -->
                 </h6>
                 <a href="">
-                  Buy Now
+                  Read More
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
+        <!-- <div class="col-md-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src="images/f4.png" alt="">
+              <img src="images/f4.jpg" alt="">
             </div>
             <div class="detail-box">
               <h5>
-                brown Table Design
+                Cloud Services
               </h5>
               <div class="price_box">
                 <h6 class="price_heading">
-                  <span>$</span> 100.00
+                   <span>$</span> 100.00 
                 </h6>
                 <a href="">
-                  Buy Now
+                Read More
                 </a>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-4">
           <div class="box">
             <div class="img-box">
               <img src="images/f5.png" alt="">
@@ -303,8 +303,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-4">
           <div class="box">
             <div class="img-box">
               <img src="images/f6.png" alt="">
@@ -323,7 +323,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -348,10 +348,10 @@
                 About Us
               </h2>
             </div>
-            <p>
-              A full-service technology provider offering digital and technical solutions for your company.<br>
+            <p style="text-align: justify;">
+              A full-service technology provider offering digital and technical solutions for your company.<br><br>
               Making things work for you is what we do. Our staff is prepared to assist you in creating a customized plan to scale your organization because we have over two decades of varied technology knowledge. We provide a wide range of services, including website and app development, cloud computing, and IT solutions.<br>
-              At Boolean Index, we work hard to give our clients the tranquility they deserve.
+              <br>At <b>Boolean Index</b>, we work hard to give our clients the tranquility they deserve.
             </p>
             <a href="about.html">
               Read More
@@ -381,15 +381,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                ttook even slightly believable. If you are
+                What would you do if you lost all your data?
               </h5>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
+              <p style="text-align: justify;">
+                What could go wrong with your business operations is impossible to foresee. What you can do is prepare for the worst-case scenario. Access to firm data and a dependable network are critical for successful operations in many businesses.
               </p>
               <a href="">
                 Read More
@@ -404,11 +399,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Anything embarrassing hidden in the middle
+                Final piece of your IT puzzle?
               </h5>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
+              <p style="text-align: justify;">
+                Network virtualization is the process of converting your network resources from hardware to software. In layman's terms, network virtualization entails linking or separating physical and virtual networks. The configuration of your network is determined by the needs of your company.
               </p>
               <a href="">
                 Read More
@@ -423,11 +417,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Molestias magni natus dolores odio commodi. Quaerat!
+                The Public Cloud!
               </h5>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
+              <p style="text-align: justify;">
+                A public cloud is a collection of computing services provided by a third-party supplier and accessible to your company via the public internet. EMPIST public cloud solutions aid in the management of these services.<br><br><br>
               </p>
               <a href="">
                 Read More
@@ -593,19 +586,19 @@
         <a href="">
           <i class="fa fa-phone" aria-hidden="true"></i>
           <span>
-            Call : +01 123455678990
+            Call : +01 1800 xxx-xxx
           </span>
         </a>
         <a href="">
           <i class="fa fa-envelope" aria-hidden="true"></i>
           <span>
-            Email : demo@gmail.com
+            Email : info@booleanindex.com
           </span>
         </a>
         <a href="">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
           <span>
-            Location
+            Chicago, IL
           </span>
         </a>
       </div>
@@ -620,7 +613,7 @@
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="Services.html">Services</a>
+                <a class="" href="index_Services.html">Services</a>
                 <a class="" href="blog.html">Blog</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
@@ -636,13 +629,13 @@
                   <img src="images/f1.png" alt="">
                 </div>
                 <div class="img-box">
-                  <img src="images/f2.jpg" alt="">
+                  <img src="images/f2.png" alt="">
                 </div>
                 <div class="img-box">
                   <img src="images/f3.png" alt="">
                 </div>
                 <div class="img-box">
-                  <img src="images/f4.png" alt="">
+                  <img src="images/f4.jpg" alt="">
                 </div>
                 <div class="img-box">
                   <img src="images/f5.png" alt="">
