--- a/index_Services.html
+++ b/index_Services.html
@@ -56,20 +56,18 @@
               <!-- <li><a href="#">Services</a></li> -->
               <li class="dropdown"><a href="#"><span>IT Services</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="#">Managed Services</a></li>
+                  <li><a href="#">Cloud Services</a></li>
+                  <li><a href="#">Professional IT Services</a></li>
+                  <li><a href="#">Cybersecurity</a></li>
+                  <li><a href="#">Process Improvement in Business</a></li>
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>Digital Alternatives</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
+                <li><a href="#">Website Design and Development</a></li>
+                <li><a href="#">Full Stack Development</a></li>
+                <li><a href="#">Website Maintenance</a></li>
               </ul>
               <li><a href="#">Consulting</a></li>
               <!-- <li><a href="#">Drop Down 4</a></li> -->
@@ -644,11 +642,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">IT Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Alternatives</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Consulting</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
