--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
